updated the Work section

--- a/index.html
+++ b/index.html
@@ -97,6 +97,54 @@
         <div class="row">
           <div class="cardContainer col-lg-4 col-md-6 col-sm-12">
             <div class="card">
+              <img src="./assets/images/habit-forming.png" class="card-img-top" alt="..." height="400px">
+              <div class="card-body">
+                <h5 class="card-title"> Project: 2: Habit Tracker</h5>
+                <div class="d-flex flex-column">
+                  <a href="https://habittracking-app.herokuapp.com/" class="btn btn-primary btn-md mb-3" tabindex="-1"
+                    role="button" target="_blank">Deployed Application </a>
+                  <a href="https://github.com/ashak90/project-02-habit-tracker" class="btn btn-primary btn-md"
+                    tabindex="-1" role="button" target="_blank">Github Repo</a>
+                </div>
+              </div>
+            </div>
+          </div>
+
+          <div class="cardContainer col-lg-4 col-md-6 col-sm-12">
+            <div class="card">
+              <img src="./assets/images/noteTaker.jpg" class="card-img-top" alt="..." height="400px">
+              <div class="card-body">
+                <h5 class="card-title">Note Taker</h5>
+                <div class="d-flex flex-column">
+                  <a href="https://notetaker-tool.herokuapp.com/" class="btn btn-primary btn-md mb-3" tabindex="-1"
+                    role="button" target="_blank">Deployed Application </a>
+                  <a href="https://github.com/ashak90/11-note-taker" class="btn btn-primary btn-md" tabindex="-1"
+                    role="button" target="_blank">Github Repo</a>
+                </div>
+              </div>
+            </div>
+          </div>
+
+          <div class="cardContainer col-lg-4 col-md-0 col-sm-12">
+            <div class="card">
+              <img src="./assets/images/fitnessTracker.jpg" class="card-img-top" alt="..." height="400px">
+              <div class="card-body">
+                <h5 class="card-title">Fitness Tracker</h5>
+                <div class="d-flex flex-column">
+                  <a href="https://h18-fitness-tracker.herokuapp.com/" class="btn btn-primary btn-md mb-3" tabindex="-1"
+                    role="button" target="_blank">Deployed Application </a>
+                  <a href="https://github.com/ashak90/18-fitness-tracker" class="btn btn-primary btn-md" tabindex="-1"
+                    role="button" target="_blank">Github Repo</a>
+                </div>
+              </div>
+            </div>
+          </div>
+
+        </div><!-- close row -->
+
+        <div class="row">
+          <div class="cardContainer col-lg-4 col-md-6 col-sm-12">
+            <div class="card">
               <img src="./assets/images/dayPlanner.jpg" class="card-img-top" alt="..." height="400px">
               <div class="card-body">
                 <h5 class="card-title">Day Planner</h5>
@@ -134,9 +182,9 @@
                 <h5 class="card-title">Weather Dashboard</h5>
                 <p class="card-text">Coming Soon...</p>
                 <div class="d-flex flex-column">
-                  <a href="https://ashak90.github.io/06-weather-dashboard/" class="btn btn-primary btn-md mb-3" tabindex="-1"
-                    role="button" target="_blank">Deployed Application </a>
-                    <a href="https://github.com/ashak90/06-weather-dashboard" class="btn btn-primary btn-md" tabindex="-1"
+                  <a href="https://ashak90.github.io/06-weather-dashboard/" class="btn btn-primary btn-md mb-3"
+                    tabindex="-1" role="button" target="_blank">Deployed Application </a>
+                  <a href="https://github.com/ashak90/06-weather-dashboard" class="btn btn-primary btn-md" tabindex="-1"
                     role="button" target="_blank"> Github Repo </a>
                 </div>
               </div>
@@ -145,39 +193,6 @@
 
 
         </div><!-- Close row -->
-
-        <div class="row">
-          <div class="cardContainer col-lg-4 col-md-6 col-sm-12">
-            <div class="card">
-              <img src="./assets/images/budget.jpeg" class="card-img-top" alt="..." height="400px">
-              <div class="card-body">
-                <h5 class="card-title"> Budget Tracker</h5>
-                <p class="card-text"> Coming Soon...</p>
-              </div>
-            </div>
-          </div>
-
-          <div class="cardContainer col-lg-4 col-md-6 col-sm-12">
-            <div class="card">
-              <img src="./assets/images/noteTaker.jpg" class="card-img-top" alt="..." height="400px">
-              <div class="card-body">
-                <h5 class="card-title">Note Taker</h5>
-                <p class="card-text">Coming Soon...</p>
-              </div>
-            </div>
-          </div>
-
-          <div class="cardContainer col-lg-4 col-md-0 col-sm-12">
-            <div class="card">
-              <img src="./assets/images/fitnessTracker.jpg" class="card-img-top" alt="..." height="400px">
-              <div class="card-body">
-                <h5 class="card-title">Fitness Tracker</h5>
-                <p class="card-text"> Coming Soon...</p>
-              </div>
-            </div>
-          </div>
-
-        </div><!-- close row -->
       </div><!-- Close container fluid -->
     </section>
 
@@ -214,7 +229,8 @@
       <a href="https://www.linkedin.com/in/asha-k/" target="_blank"> <img
           src="https://img.icons8.com/ios-filled/50/000000/linkedin-2--v1.png" class="glyph" /> </a>
 
-      <a href="https://github.com/ashak90" target="_blank"><img src="https://img.icons8.com/ios-glyphs/60/000000/github.png" class="glyph" /></a>
+      <a href="https://github.com/ashak90" target="_blank"><img
+          src="https://img.icons8.com/ios-glyphs/60/000000/github.png" class="glyph" /></a>
       <!-- <img src="https://img.icons8.com/ios-glyphs/60/000000/behance.png" class="glyph" /> -->
       <a href="https://twitter.com/ashakdesigns" target="_blank"><img
           src="https://img.icons8.com/ios-glyphs/60/000000/twitter.png" class="glyph" /> </a>
